fixed scrollbar

--- a/src/components/schedule/Schedule.module.css
+++ b/src/components/schedule/Schedule.module.css
@@ -9,29 +9,8 @@
   position: relative;
 }
 
-.tableContainer::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50px;
-  height: 100%;
-  background: linear-gradient(to left, white, transparent);
-  pointer-events: none;
-}
-
-.tableContainer::-webkit-scrollbar {
-  height: 20px;
-}
-
-.tableContainer::-webkit-scrollbar-thumb {
-  background-color: #00a74a;
-  border-radius: 5px;
-}
-
-.tableContainer::-webkit-scrollbar-track {
-  background-color: #d2e4d7;
-  border-radius: 5px;
+.scrollHint {
+  display: none;
 }
 
 .scheduleTable {
@@ -121,19 +100,14 @@
     overflow-x: auto;
   }
 
-  /* .tableContainer::-webkit-scrollbar {
-    height: 10px;
+  .scrollHint {
+    display: inline-block;
+    text-align: center;
+    font-size: 1rem;
+    color: #00a74a;
+    margin-top: 15px;
+    font-family: "Ropamix medium italic", "Playfair Display";
   }
-
-  .tableContainer::-webkit-scrollbar-thumb {
-    background-color: #00a74a;
-    border-radius: 5px;
-  }
-
-  .tableContainer::-webkit-scrollbar-track {
-    background-color: #d2e4d7;
-    border-radius: 5px;
-  } */
 
   .scheduleTable {
     margin: 0px;
